Bug 1921483 - Add 'See details' link to the alert dialog shown on addon-install-failed on Firefox Desktop. r=willdurand,fluent-reviewers,desktop-theme-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D225107

--- a/browser/themes/shared/addon-notification.css
+++ b/browser/themes/shared/addon-notification.css
@@ -96,6 +96,10 @@ html|ul.webext-perm-domains-list {
   margin-inline-start: -1px;
 }
 
+.popup-notification-description[popupid="addon-install-failed-blocklist"] {
+  font-weight: normal;
+}
+
 .addon-webext-perm-notification-content,
 .addon-installed-notification-content {
   margin-top: 0;
